2003-03-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m
	In [setupAttributes] moved the call to open the XFT font further
	to the back as Derek Zhou claims that this takes over the
	ownership of the pattern, which then results in strange behaviour.
	
2003-02-27  Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac
	Check for FreeType 2 fontconfig.
	* configure
	* config.h.in
	Regenerated
	* Header/xlib/GSXftFontInfo.h
	Define font enumerator for fontconfig.	
	* Source/xlib/XGContext.m
	Use new enumerator in anti-alias mode if available.
	* Source/xlib/GSXftFontInfo.m
	Added fontconfig specific code.
	Patch from Derek Zhou dzhou@chrontel.com with some adaption
	
2003-02-24  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.4

2003-02-20  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/xlib/XGFont.m ([XGFontInfo -setupAttributes]): Use
	ascender and descender informaton of the X11 font instead of using
	maximum bounding box.

2003-02-19  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSStreamContext.m (fpfloat): New function. Used everywhere
	to print a float regardless of current locale.

2003-02-17  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/x11/XGDragView.m ([XGDragView -drawRect:]): use [self
	frame] instead of `rect'.  Fixes #101846.
	([XGDragView -_handleDrag:]): Fixed typo in comment
	([XGDragView -_handleEventDuringDragging:theEvent]): Removed old 
	comment.
	
2003-02-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGDragView.m: Set drag window at NSPopUpMenuWindowLevel
	so that it lies above pretty much anything apart from screensaver.

2003-02-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m
	Removed implementation of image sliding. Corrected
	xgps_cursor_image compiler warning.
	* Header/x11/XGSlideView.h
	* Source/x11/XGSlideView.m
	Removed files as they are now in the front end.
	* Source/x11/GNUmakefile
	Removed XGSlideView.m
	
2003-02-10 18:44  Alexander Malmberg <alexander@malmberg.org>
