@@ -1,3 +1,8 @@
+2003-03-03 20:05  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/art/ftfont.m: Remap glyph numbers from freetype so
+	NSNullGlyph is never used.
+
 2003-03-01  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/xlib/GSXftFontInfo.m
